--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:theme="@style/Theme.PetNeeds">
         <meta-data android:name="com.google.android.geo.API_KEY"
             android:value="@string/map_key"/>
+        <activity android:name=".DetailActivity"></activity>
         <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
